recalculated the path and velocity of its reveal for the trail components. some styling changes to footer to fix image stretching.

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar-thumb {
 section {
   max-height: fit-content; 
   text-align: center;
-  padding: 0 100px;
+  padding: 20px 100px;
   min-height: 80vh;
 }
 
