--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -31,7 +31,7 @@
   .yellow-flower {
     position: absolute;
     left: 20%;
-    bottom: 50px;
+    bottom: 30px;
     width: 75px;
     height: 75px;
     background-image: url('/footer/yellowflower.png');
@@ -43,7 +43,7 @@
   .blue-flower {
     position: absolute;
     left: 80%;
-    bottom: 60px;
+    bottom: 30px;
     width: 75px;
     height: 75px;
     background-image: url('/footer/blueflower.png');
@@ -54,13 +54,14 @@
   
   .footer-grass {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-image: url('/footer/grass.png');
-    background-size: 50% 160%;
-    background-position:bottom;
+    background-size: auto 100%;
+    background-repeat: repeat-x;
     z-index: 2;
-    opacity: 1;
   }
 
   @keyframes waveAnimation {
@@ -96,8 +97,8 @@
     width: 100%;
     height: 100%;
     background-image: url('/footer/cityskyline.png');
+    background-size: 40% 130%;
     background-repeat: repeat-x;
-    background-size: 50% 150%;
     background-position: bottom;
   }
 
@@ -130,7 +131,7 @@
     .footer-city,
     .footer-grass,
     .footer-flowers {
-        width: 250%;
+        width: 100%;
     }
 
     .footer-content{
